constraint-template.yaml
apiVersion: [templates.gatekeeper.sh/v1beta1](http://templates.gatekeeper.sh/v1beta1)
kind: ConstraintTemplate
metadata:
 name: k8srequiredlabels
spec:
 crd:
 spec:
 names:
 kind: K8sRequiredLabels
 listKind: K8sRequiredLabelsList
 plural: k8srequiredlabels
 singular: k8srequiredlabels
 validation:
 # Schema for the `parameters` field
 openAPIV3Schema:
 properties:
 labels:
 type: array
 items: string
 targets:
 - target: [admission.k8s.gatekeeper.sh](http://admission.k8s.gatekeeper.sh)
 rego: |
 package k8srequiredlabels

 deny[{"msg": msg, "details": {"missing_labels": missing}}] {
 provided := {label | input.review.object.metadata.labels[label]}
 required := {label | label := input.parameters.labels[_]}
 missing := required - provided
 count(missing) > 0
 msg := sprintf("you must provide labels: %v", [missing])
 }
